// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`can() — authz matrix > partner-tenant matrix is stable 1`] = `
{
  "manager": {
    "admin.audit.read": false,
    "admin.listings.review": false,
    "admin.payouts.execute": false,
    "admin.payouts.read": false,
    "admin.tenants.read": false,
    "admin.tenants.suspend": false,
    "analytics.read": true,
    "arenas.read": true,
    "arenas.write": true,
    "bookings.cancel": true,
    "bookings.create": true,
    "bookings.read": true,
    "events.read": true,
    "events.write": true,
    "financials.read": true,
    "integration.api_keys.manage": true,
    "members.invite": true,
    "members.read": true,
    "members.remove": true,
    "members.role_change": true,
    "memberships.read": true,
    "memberships.write": true,
    "pricing.read": true,
    "pricing.write": true,
    "schedules.read": true,
    "schedules.write": true,
    "tenant.delete": false,
    "tenant.read": true,
    "tenant.update": true,
    "venues.read": true,
    "venues.write": true,
  },
  "owner": {
    "admin.audit.read": false,
    "admin.listings.review": false,
    "admin.payouts.execute": false,
    "admin.payouts.read": false,
    "admin.tenants.read": false,
    "admin.tenants.suspend": false,
    "analytics.read": true,
    "arenas.read": true,
    "arenas.write": true,
    "bookings.cancel": true,
    "bookings.create": true,
    "bookings.read": true,
    "events.read": true,
    "events.write": true,
    "financials.read": true,
    "integration.api_keys.manage": true,
    "members.invite": true,
    "members.read": true,
    "members.remove": true,
    "members.role_change": true,
    "memberships.read": true,
    "memberships.write": true,
    "pricing.read": true,
    "pricing.write": true,
    "schedules.read": true,
    "schedules.write": true,
    "tenant.delete": true,
    "tenant.read": true,
    "tenant.update": true,
    "venues.read": true,
    "venues.write": true,
  },
  "readonly": {
    "admin.audit.read": false,
    "admin.listings.review": false,
    "admin.payouts.execute": false,
    "admin.payouts.read": false,
    "admin.tenants.read": false,
    "admin.tenants.suspend": false,
    "analytics.read": true,
    "arenas.read": true,
    "arenas.write": false,
    "bookings.cancel": false,
    "bookings.create": false,
    "bookings.read": true,
    "events.read": true,
    "events.write": false,
    "financials.read": true,
    "integration.api_keys.manage": false,
    "members.invite": false,
    "members.read": true,
    "members.remove": false,
    "members.role_change": false,
    "memberships.read": true,
    "memberships.write": false,
    "pricing.read": true,
    "pricing.write": false,
    "schedules.read": true,
    "schedules.write": false,
    "tenant.delete": false,
    "tenant.read": true,
    "tenant.update": false,
    "venues.read": true,
    "venues.write": false,
  },
  "staff": {
    "admin.audit.read": false,
    "admin.listings.review": false,
    "admin.payouts.execute": false,
    "admin.payouts.read": false,
    "admin.tenants.read": false,
    "admin.tenants.suspend": false,
    "analytics.read": true,
    "arenas.read": true,
    "arenas.write": false,
    "bookings.cancel": true,
    "bookings.create": true,
    "bookings.read": true,
    "events.read": true,
    "events.write": false,
    "financials.read": false,
    "integration.api_keys.manage": false,
    "members.invite": false,
    "members.read": true,
    "members.remove": false,
    "members.role_change": false,
    "memberships.read": true,
    "memberships.write": false,
    "pricing.read": true,
    "pricing.write": false,
    "schedules.read": true,
    "schedules.write": false,
    "tenant.delete": false,
    "tenant.read": true,
    "tenant.update": false,
    "venues.read": true,
    "venues.write": false,
  },
}
`;

exports[`can() — authz matrix > platform-tenant matrix is stable 1`] = `
{
  "manager": {
    "admin.audit.read": true,
    "admin.listings.review": true,
    "admin.payouts.execute": true,
    "admin.payouts.read": true,
    "admin.tenants.read": true,
    "admin.tenants.suspend": true,
    "analytics.read": false,
    "arenas.read": false,
    "arenas.write": false,
    "bookings.cancel": false,
    "bookings.create": false,
    "bookings.read": false,
    "events.read": false,
    "events.write": false,
    "financials.read": false,
    "integration.api_keys.manage": true,
    "members.invite": false,
    "members.read": true,
    "members.remove": false,
    "members.role_change": false,
    "memberships.read": false,
    "memberships.write": false,
    "pricing.read": false,
    "pricing.write": false,
    "schedules.read": false,
    "schedules.write": false,
    "tenant.delete": false,
    "tenant.read": true,
    "tenant.update": true,
    "venues.read": false,
    "venues.write": false,
  },
  "owner": {
    "admin.audit.read": true,
    "admin.listings.review": true,
    "admin.payouts.execute": true,
    "admin.payouts.read": true,
    "admin.tenants.read": true,
    "admin.tenants.suspend": true,
    "analytics.read": true,
    "arenas.read": true,
    "arenas.write": true,
    "bookings.cancel": true,
    "bookings.create": true,
    "bookings.read": true,
    "events.read": true,
    "events.write": true,
    "financials.read": true,
    "integration.api_keys.manage": true,
    "members.invite": true,
    "members.read": true,
    "members.remove": true,
    "members.role_change": true,
    "memberships.read": true,
    "memberships.write": true,
    "pricing.read": true,
    "pricing.write": true,
    "schedules.read": true,
    "schedules.write": true,
    "tenant.delete": true,
    "tenant.read": true,
    "tenant.update": true,
    "venues.read": true,
    "venues.write": true,
  },
  "readonly": {
    "admin.audit.read": true,
    "admin.listings.review": false,
    "admin.payouts.execute": false,
    "admin.payouts.read": true,
    "admin.tenants.read": true,
    "admin.tenants.suspend": false,
    "analytics.read": false,
    "arenas.read": false,
    "arenas.write": false,
    "bookings.cancel": false,
    "bookings.create": false,
    "bookings.read": false,
    "events.read": false,
    "events.write": false,
    "financials.read": false,
    "integration.api_keys.manage": false,
    "members.invite": false,
    "members.read": true,
    "members.remove": false,
    "members.role_change": false,
    "memberships.read": false,
    "memberships.write": false,
    "pricing.read": false,
    "pricing.write": false,
    "schedules.read": false,
    "schedules.write": false,
    "tenant.delete": false,
    "tenant.read": true,
    "tenant.update": false,
    "venues.read": false,
    "venues.write": false,
  },
  "staff": {
    "admin.audit.read": true,
    "admin.listings.review": true,
    "admin.payouts.execute": false,
    "admin.payouts.read": true,
    "admin.tenants.read": true,
    "admin.tenants.suspend": false,
    "analytics.read": false,
    "arenas.read": false,
    "arenas.write": false,
    "bookings.cancel": false,
    "bookings.create": false,
    "bookings.read": false,
    "events.read": false,
    "events.write": false,
    "financials.read": false,
    "integration.api_keys.manage": false,
    "members.invite": false,
    "members.read": true,
    "members.remove": false,
    "members.role_change": false,
    "memberships.read": false,
    "memberships.write": false,
    "pricing.read": false,
    "pricing.write": false,
    "schedules.read": false,
    "schedules.write": false,
    "tenant.delete": false,
    "tenant.read": true,
    "tenant.update": false,
    "venues.read": false,
    "venues.write": false,
  },
}
`;
